force-app/main/default/objects/Case_Category_Lookup_Requirements__mdt/Case_Category_Lookup_Requirements__mdt.object-meta.xml
<CustomObject>
    <label>Case Category Lookup Requirements</label>
    <pluralLabel>Case Category Lookup Requirements</pluralLabel>
</CustomObject>