force-app/main/default/objects/Case_Category_Lookup_Requirements__mdt/fields/Card_Optional__c.field-meta.xml
<CustomField>
    <fullName>Card_Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Card Optional</label>
    <type>Checkbox</type>
</CustomField>