force-app/main/default/objects/Case_Category_Lookup_Requirements__mdt/fields/Card_Required__c.field-meta.xml
<CustomField>
    <fullName>Card_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Card Required</label>
    <type>Checkbox</type>
</CustomField>