force-app/main/default/objects/Case_Category_Lookup_Requirements__mdt/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>