force-app/main/default/objects/Case_Category_Lookup_Requirements__mdt/fields/Financial_Account_Required__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Account Required</label>
    <type>Checkbox</type>
</CustomField>