force-app/main/default/objects/Case_Category_Lookup_Requirements__mdt/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Case_Reason__c</columns>
    <columns>Case_Category__c</columns>
    <columns>Account_Required__c</columns>
    <columns>Financial_Account_Required__c</columns>
    <columns>Card_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
    <language>en_US</language>
</ListView>